--- a/app.json
+++ b/app.json
@@ -27,7 +27,13 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos of cats."
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
