--- a/package.json
+++ b/package.json
@@ -16,14 +16,21 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@gluestack-ui/button": "^1.0.7",
+    "@gluestack-ui/image": "^0.1.10",
     "@gluestack-ui/nativewind-utils": "^1.0.24",
     "@gluestack-ui/overlay": "^0.1.15",
     "@gluestack-ui/toast": "^1.0.7",
+    "@legendapp/motion": "^2.4.0",
     "@react-navigation/native": "^6.0.2",
+    "@tanstack/react-query": "5.56.2",
+    "@thatapicompany/thecatapi": "^1.0.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
+    "expo-file-system": "17.0.1",
     "expo-font": "~12.0.9",
+    "expo-image-picker": "15.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
@@ -47,6 +54,10 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "^7.1.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "jscodeshift": "^0.15.2",
