--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^13.4.0",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.13",
+    "lottie-react-native": "6.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
